# genai-stack

./: .dockerignore  api.Dockerfile  bot.Dockerfile  bot.py  chains.py  docker-compose.yml  loader.Dockerfile  pdf_bot.Dockerfile  pyproject.toml
