[tool.poetry]
name = "genai-stack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "2.2.2"
torch = "2.0.1"
openai = "^1.30.1"
python-dotenv = "^1.0.1"
wikipedia = "^1.4.0"
tiktoken = "^0.7.0"
neo4j = "^5.20.0"
streamlit = "^1.34.0"
pillow = "^10.3.0"
fastapi = "^0.111.0"
pypdf2 = "^3.0.1"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
sse-starlette = "^2.1.0"
boto3 = "^1.34.110"
langchain-openai = "^0.1.7"
langchain-community = "^0.2.0"
langchain-google-genai = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
